--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "^4.0.7",
+    "bulma": "^0.7.5",
+    "bulma-extensions": "^6.2.7",
     "dropzone": "^5.5.1",
+    "extensions": "^4.1.2",
     "jquery": "^3.4.1",
     "noty": "^3.2.0-beta",
     "trix": "^1.0.0",
